function(add_ds_test name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PRIVATE DSAlgo project_warnings)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

add_ds_test(test_list)
add_ds_test(test_linked_list_single)
add_ds_test(test_linked_list_double)
add_ds_test(test_hashmap_chained)
add_ds_test(test_hashmap_oa)
add_ds_test(test_array)
add_ds_test(test_util)